# friends_bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  const.py  db.py  extra_types.py  main.py  models.py  utils.py
src/commands/: __init__.py  base.py  start.py
src/handlers/: __init__.py  base_command.py  callbacks.py  const.py  mappings.py  meeting.py  start.py
src/handlers/meeting/: __init__.py  base.py  callbacks.py  commands.py  const.py  conversation.py  meeting.py  utils.py
tests/: test_main.py
